[package]
name = "pcc_dvp_camera"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
atsamd51-pcc = { git="https://github.com/QuartzShard/atsamd51-pcc", default-features = false, features = [] }
defmt = "1.0.1"
atsamd-hal = { version = "0.22.2", optional = true }
atsamd-hal-git = { package = "atsamd-hal", git="https://github.com/QuartzShard/atsamd", branch="extra_i2c_pads", optional = true, features = ["samd51p", "samd51p-rt", "dma", "defmt"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
fugit = { version = "0.3.9", features = ["defmt"] }

[features]
default = ["ov5640", "samd51j"]
adafruit-branch = ["atsamd-hal-git", "atsamd51-pcc/adafruit-branch"]
ov5640 = []
samd51g = ["atsamd51-pcc/samd51g", "atsamd-hal/samd51g", "atsamd-hal"]
samd51j = ["atsamd51-pcc/samd51j", "atsamd-hal/samd51j", "atsamd-hal"]
samd51n = ["atsamd51-pcc/samd51n", "atsamd-hal/samd51n", "atsamd-hal"]
samd51p = ["atsamd51-pcc/samd51p", "atsamd-hal/samd51p", "atsamd-hal"]
same51g = ["atsamd51-pcc/same51g", "atsamd-hal/same51g", "atsamd-hal"]
same51j = ["atsamd51-pcc/same51j", "atsamd-hal/same51j", "atsamd-hal"]
same51n = ["atsamd51-pcc/same51n", "atsamd-hal/same51n", "atsamd-hal"]
